--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1751,3 +1751,54 @@ Button -Ravinder
     margin-inline: auto !important;
   }
 }
+
+
+
+/* Adding the form for the induction  */
+
+/********* Feature CSS *********/
+/*******************************/
+#form-main{
+  display: flex;
+  width: 100%;
+  height: auto;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 5px;
+  flex-direction: column;
+  background-color:floralwhite;
+  border: silver 5px solid;
+  box-shadow:gray 10px 10px 5px;
+  border-radius: 40rem;
+  width: 90%;
+  margin-left: 5%;
+  margin-right: 5%;
+}
+#form{
+  color: #000;;
+  background-color: yellow;
+  height: 50px;
+  padding: 20px;
+  font-size: 25px;
+  width: 200px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  align-self: center;
+  border-radius: 50rem;
+
+
+
+  
+  
+}
+#ded{
+  color: #000;
+  margin: 10px;
+  font-size: 25px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  align-self: center;
+
+}
